# mcp-qbittorrent

./: .env.example  CLAUDE.md  README.md  main.py  mcp-integration-migration-plan.md  plan_docker_compose.md  pyproject.toml  qbittorrent-mcp-server-plan.md
.claude/: settings.local.json
src/mcp_qbittorrent/: config.py  server.py
src/mcp_qbittorrent/clients/: qbittorrent_client.py
src/mcp_qbittorrent/models/: schemas.py
src/mcp_qbittorrent/tools/: qbittorrent_tools.py
tests/: test_qbittorrent_client.py
